# pkg/docs/swagger.json
@@ -443,7 +443,7 @@
                         "schema": {
                             "type": "array",
                             "items": {
-                                "$ref": "#/definitions/model.Contract"
+                                "$ref": "#/definitions/model.ContractDTO"
                             }
                         }
                     },
@@ -492,20 +492,20 @@
                 "summary": "Create a new contract",
                 "parameters": [
                     {
-                        "description": "New contract description",
+                        "description": "Contract Params",
                         "name": "job",
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/controller.jobDescription"
+                            "$ref": "#/definitions/controller.createContractParams"
                         }
                     }
                 ],
                 "responses": {
-                    "200": {
-                        "description": "OK",
+                    "201": {
+                        "description": "Created",
                         "schema": {
-                            "$ref": "#/definitions/model.Contract"
+                            "$ref": "#/definitions/model.ContractDTO"
                         }
                     },
                     "400": {
@@ -578,7 +578,7 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/model.Contract"
+                            "$ref": "#/definitions/model.ContractDTO"
                         }
                     },
                     "401": {
@@ -634,15 +634,6 @@
                 "summary": "Accept contract",
                 "parameters": [
                     {
-                        "description": "Parameters",
-                        "name": "params",
-                        "in": "body",
-                        "required": true,
-                        "schema": {
-                            "$ref": "#/definitions/controller.acceptParameters"
-                        }
-                    },
-                    {
                         "type": "string",
                         "description": "Contract ID",
                         "name": "id",
@@ -654,13 +645,7 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/model.Contract"
-                        }
-                    },
-                    "400": {
-                        "description": "invalid format",
-                        "schema": {
-                            "$ref": "#/definitions/model.BackendError"
+                            "$ref": "#/definitions/model.ContractDTO"
                         }
                     },
                     "401": {
@@ -725,7 +710,7 @@
                 "tags": [
                     "contract"
                 ],
-                "summary": "Approve working results",
+                "summary": "Approve working results and allow to withdraw money from Smart Contract",
                 "parameters": [
                     {
                         "type": "string",
@@ -739,7 +724,7 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/model.Contract"
+                            "$ref": "#/definitions/model.ContractDTO"
                         }
                     },
                     "401": {
@@ -818,7 +803,7 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/model.Contract"
+                            "$ref": "#/definitions/model.ContractDTO"
                         }
                     },
                     "401": {
@@ -867,7 +852,7 @@
                         "BearerToken": []
                     }
                 ],
-                "description": "Customer is deploying contract in the blockchain",
+                "description": "Customer has deployed contract to the blockchain",
                 "consumes": [
                     "application/json"
                 ],
@@ -880,15 +865,6 @@
                 "summary": "Deploy contract",
                 "parameters": [
                     {
-                        "description": "Parameters",
-                        "name": "params",
-                        "in": "body",
-                        "required": true,
-                        "schema": {
-                            "$ref": "#/definitions/controller.deployParameters"
-                        }
-                    },
-                    {
                         "type": "string",
                         "description": "Contract ID",
                         "name": "id",
@@ -900,7 +876,7 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/model.Contract"
+                            "$ref": "#/definitions/model.ContractDTO"
                         }
                     },
                     "400": {
@@ -928,7 +904,7 @@
                         }
                     },
                     "422": {
-                        "description": "validation failed or insufficient funds on the contract in the blockchain",
+                        "description": "validation failed",
                         "schema": {
                             "$ref": "#/definitions/model.BackendError"
                         }
@@ -954,14 +930,14 @@
                 }
             }
         },
-        "/contracts/{id}/send": {
+        "/contracts/{id}/fund": {
             "post": {
                 "security": [
                     {
                         "BearerToken": []
                     }
                 ],
-                "description": "Performer is sending working results to customer",
+                "description": "Customer is funded contract in the blockchain",
                 "consumes": [
                     "application/json"
                 ],
@@ -971,7 +947,7 @@
                 "tags": [
                     "contract"
                 ],
-                "summary": "Send working results to customer",
+                "summary": "Fund contract",
                 "parameters": [
                     {
                         "type": "string",
@@ -985,7 +961,13 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/model.Contract"
+                            "$ref": "#/definitions/model.ContractDTO"
+                        }
+                    },
+                    "400": {
+                        "description": "invalid format",
+                        "schema": {
+                            "$ref": "#/definitions/model.BackendError"
                         }
                     },
                     "401": {
@@ -1002,6 +984,97 @@
                     },
                     "404": {
                         "description": "contract not found or user not authorized to view contract",
+                        "schema": {
+                            "$ref": "#/definitions/model.BackendError"
+                        }
+                    },
+                    "422": {
+                        "description": "validation failed",
+                        "schema": {
+                            "$ref": "#/definitions/model.BackendError"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "allOf": [
+                                {
+                                    "$ref": "#/definitions/echo.HTTPError"
+                                },
+                                {
+                                    "type": "object",
+                                    "properties": {
+                                        "message": {
+                                            "type": "string"
+                                        }
+                                    }
+                                }
+                            ]
+                        }
+                    }
+                }
+            }
+        },
+        "/contracts/{id}/sign": {
+            "post": {
+                "security": [
+                    {
+                        "BearerToken": []
+                    }
+                ],
+                "description": "Performer is signing contract",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "contract"
+                ],
+                "summary": "Sign contract",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "Contract ID",
+                        "name": "id",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/model.ContractDTO"
+                        }
+                    },
+                    "400": {
+                        "description": "invalid format",
+                        "schema": {
+                            "$ref": "#/definitions/model.BackendError"
+                        }
+                    },
+                    "401": {
+                        "description": "user not authorized",
+                        "schema": {
+                            "$ref": "#/definitions/model.BackendError"
+                        }
+                    },
+                    "403": {
+                        "description": "insufficient rights",
+                        "schema": {
+                            "$ref": "#/definitions/model.BackendError"
+                        }
+                    },
+                    "404": {
+                        "description": "contract not found or user not authorized to view contract",
+                        "schema": {
+                            "$ref": "#/definitions/model.BackendError"
+                        }
+                    },
+                    "422": {
+                        "description": "validation failed",
                         "schema": {
                             "$ref": "#/definitions/model.BackendError"
                         }
@@ -2041,18 +2114,28 @@
         }
     },
     "definitions": {
-        "controller.acceptParameters": {
+        "controller.createContractParams": {
             "type": "object",
+            "required": [
+                "application_id",
+                "description",
+                "price",
+                "title"
+            ],
             "properties": {
-                "performer_address": {
+                "application_id": {
                     "type": "string"
-                }
-            }
-        },
-        "controller.deployParameters": {
-            "type": "object",
-            "properties": {
-                "contract_address": {
+                },
+                "description": {
+                    "type": "string"
+                },
+                "duration": {
+                    "type": "integer"
+                },
+                "price": {
+                    "type": "number"
+                },
+                "title": {
                     "type": "string"
                 }
             }
@@ -2136,7 +2219,7 @@
             "type": "object",
             "properties": {
                 "applicant": {
-                    "$ref": "#/definitions/model.Person"
+                    "$ref": "#/definitions/model.JobApplicant"
                 },
                 "comment": {
                     "type": "string"
@@ -2242,6 +2325,62 @@
                 }
             }
         },
+        "model.ContractDTO": {
+            "type": "object",
+            "properties": {
+                "application_id": {
+                    "type": "string"
+                },
+                "contract_address": {
+                    "type": "string"
+                },
+                "created_at": {
+                    "type": "string"
+                },
+                "created_by": {
+                    "type": "string"
+                },
+                "customer_address": {
+                    "type": "string"
+                },
+                "customer_display_name": {
+                    "type": "string"
+                },
+                "customer_id": {
+                    "type": "string"
+                },
+                "description": {
+                    "type": "string"
+                },
+                "duration": {
+                    "type": "integer"
+                },
+                "id": {
+                    "type": "string"
+                },
+                "performer_address": {
+                    "type": "string"
+                },
+                "performer_display_name": {
+                    "type": "string"
+                },
+                "performer_id": {
+                    "type": "string"
+                },
+                "price": {
+                    "type": "number"
+                },
+                "status": {
+                    "type": "string"
+                },
+                "title": {
+                    "type": "string"
+                },
+                "updated_at": {
+                    "type": "string"
+                }
+            }
+        },
         "model.Job": {
             "type": "object",
             "properties": {
@@ -2273,6 +2412,23 @@
                     "type": "string"
                 },
                 "updated_at": {
+                    "type": "string"
+                }
+            }
+        },
+        "model.JobApplicant": {
+            "type": "object",
+            "properties": {
+                "display_name": {
+                    "type": "string"
+                },
+                "ethereum_address": {
+                    "type": "string"
+                },
+                "id": {
+                    "type": "string"
+                },
+                "resources": {
                     "type": "string"
                 }
             }
